--- a/_topic_maps/_topic_map_ms.yml
+++ b/_topic_maps/_topic_map_ms.yml
@@ -153,6 +153,8 @@ Topics:
   File: microshift-operators
 - Name: Greenboot workload health check scripts
   File: microshift-greenboot-workload-scripts
+- Name: Authentication and authorization with MicroShift 
+  File: microshift-authentication
 ---
 Name: Troubleshooting
 Dir: microshift_troubleshooting
